--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="items">
             <div class="item">
-                <div class="img">a</div>
+                <div class="img"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="item" alt=" ">
